@@ -1,4 +1,7 @@
 
+2008-12-02 (Version 0.8.5.2)
+  Adding --extractonly option
+
 
 2008-12-02 (Version 0.8.5.1)
   Version for initial sourceforge svn inport
